fix sizing of cover page on mobile

--- a/src/animation.css
+++ b/src/animation.css
@@ -53,7 +53,7 @@
 
 @media only screen and (max-width: 1200px) {
     .content h1 {
-      font-size: 5rem; /* Smaller font size for mobile */
+      font-size: 4rem; /* Smaller font size for mobile */
     }
   
     @keyframes animate {
